Fixed js problem on home page

--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
   <meta property="og:description" content="The personal resume of Thomas Edward Rudge." />
   <!-- CSS & JS -->
   <link rel="stylesheet" href="css/main.css" />
-  <script type="text/javascript" src="javascript/mobile_navigation.js" async></script>
   <!-- Structured Data -->
   <script type="application/ld+json">
   {
@@ -118,7 +117,6 @@
           </ul>
         </nav>
         <div id=navmobile>
-        <a id=mobile_navlink></a>
         </div>
         <div id=mobilelist>
           <ul class=gen_text>
@@ -204,5 +202,6 @@
     Site not working properly? <span class=main_glyph>&#128534;</span> <a class=normal_link href="mailto:hello@thomasrudge.co.uk?Subject=Something%20is%20wrong%20with%20your%20site!">Please let me know.</a>
     </footer>
   </div>
+<script type="text/javascript" src="javascript/mobile_navigation.js"></script>
 </body>
 </html>
