--- a/html/software.html
+++ b/html/software.html
@@ -212,9 +212,10 @@
       One of my first jobs was as a System Administrator and a daily task was checking the banks swift messaging system for
       the Vostro accounts, as well as incoming cash statements for the bank's main reconciliation system. I learnt a lot about swift
       message structure and standards, and so it seemed only fitting that one of my first programs be a conversion script for such
-      messages. I have created an <a class=red_link href="swift_page.html">online version</a> using Javascript, and a Python version can be
-      found on my <a class=normal_link href="https://github.com/Thomas-Rudge/MT940_50_GEN/blob/master/MT940_50.py" target="_blank">GitHub page</a>.
-      I also created a version with a graphical user interface for a company in Germany that you can download <a class=normal_link href="" target="_blank">here</a>.
+      messages. I have created an <a class=red_link href="swift_page.html">online version</a> using Javascript, and a Python and Ruby version can be
+      found on my <a class=normal_link href="https://github.com/Thomas-Rudge" target="_blank">GitHub page</a>.
+      I also created a version with a graphical user interface for a company in Germany that you can download 
+      <a class=normal_link href="https://www.dropbox.com/s/62chdik0oi9r4jf/MT9GEN.zip?dl=0" target="_blank">here</a>.
       </p>
     </div>
     <hr/>
