Added new skills and turned imgs to sprites

--- a/html/professional.html
+++ b/html/professional.html
@@ -174,37 +174,32 @@
     <div class='block_ gen_div'>
       <p class='gen_text justify med_text margin70'>
         <span class='gen_title title_text'>Curriculum Vitae</span><br />
-        Business Analyst, Operations Expert, and Software Developer, with over 8 year's experience in Business and IT Change.
+        Business Analyst and Developer with over 8 year's experience in Business and IT Change.
       </p>
       <p class='gen_text justify med_text margin70 no_bottom'>
         <span class='gen_title no_top no_bottom blue_text'><u>Summary</u></span><br />
       </p>
       <ul  class='gen_text justify med_text margin70 no_top' type='disc'>
         <li>
-        Sole designer and developer of <a class=normal_link href='software.html#nepos'>Nepos</a>, a point of sale and cash management system currently being distributed in north east India.
+        Sole designer and developer of <a class=normal_link href='software.html#nepos'>Nepos</a>, a POS and cash management system currently being distributed in north east India.
         </li>
         <li>
-        Proven leadership skills with extensive experience managing operation, test, and implementation teams, across both local and global areas.
+        Business Technical Lead on significant upgrades to corporate reconciliation system, from TLM2.0 to TLM2.7; and later from TLM2.7 to Intellimatch. Deeply involved with solution assessment, requirements management, operations process redesign and enhancement, user acceptance testing, and implementation planning and execution.
         </li>
         <li>
-        Capable of achieving operational efficiencies through data analysis, process redesign, and bespoke automation.
-          <ul type='circle'>
-            <li>
-            In my position as a Technical SME I improved the straight through processing of the main reconciliation system by 5% in the first 6 months of the role. The STP improvement equated to four full time employees.
-            </li>
-            <li>
-            Reduced a manual reconciliation process from over an hour to less than 10 minutes, by redesigning the user dashboard layout and automating some of the process.
-            </li>
-          </ul>
+        Overseen the success of numerous <a class=normal_link href='#projects'>projects</a> from inception to implementation, attaining a firm knowledge of the end to end project life cycle within waterfall and agile methodologies.
         </li>
         <li>
-        Overseen the success of numerous <a class=normal_link href='#projects'>projects</a> as a Business Analyst and TSME, attaining a firm knowledge of the end to end project life cycle and methodologies.
+        Routinely identified potential enhancements to systems configuration by retrieving large data sets (1k < 100k rows) via custom SQL, and analysing them via Excel.
         </li>
         <li>
-        High risk awareness. Completed risk assessments, created control frameworks, and performed audits for new and updated operational processes and systems; Both internally and in collaboration with third parties like Sarbanes Oxley and Deloittes.
+        Proven leadership skills with extensive experience managing operation, test, and implementation teams in the UK and India.
         </li>
         <li>
-        Solid communication skills. Experienced in facilitating requirements workshops, brainstorming sessions, training sessions, presentations, and meetings at all levels. Capable of presenting complex and technical information in a coherent and succinct way.
+        High risk awareness. Completed risk assessments, created control frameworks, owned and performed audits for new and updated operational processes and systems; both internally and in collaboration with third parties.
+        </li>
+        <li>
+        Solid communication skills. Experienced in facilitating requirements workshops, brainstorming sessions, training sessions, presentations, and meetings at all levels. Produced bespoke reports and MI for senior management.
         </li>
       </ul>
     </div>
@@ -217,97 +212,135 @@
       <div id=skill_list class='gen_text margin40 no_top'>
         <ul>
           <li>
-            <img class=table_img src='../images/logos/python.png' /> Python
+            <span class='table_img skill' id=skill_ruby></span> Ruby
           </li>
           <li>
-            <img class=table_img src='../images/logos/javascript.png' /> Javascript
+            <span class='table_img skill' id=skill_rails></span> Rails
           </li>
           <li>
-            <img class=table_img src='../images/logos/html.png' /> HTML
+            <span class='table_img skill' id=skill_rspec></span> Rspec
           </li>
           <li>
-            <img class=table_img src='../images/logos/css.png' /> CSS
+            <span class='table_img skill' id=skill_python></span> Python
           </li>
           <li>
-            <img class=table_img src='../images/logos/sql.png' /> SQL
+            <span class='table_img skill' id=skill_js></span> Javascript
           </li>
           <li>
-            <img class=table_img src='../images/logos/vba.png' /> VBA
+            <span class='table_img skill' id=skill_jquery></span> Jquery
           </li>
           <li>
-            <img class=table_img src='../images/logos/excel.png' /> MS Excel
+            <span class='table_img skill' id=skill_ajax></span> Ajax
           </li>
           <li>
-            <img class=table_img src='../images/logos/access.png' /> MS Access
+            <span class='table_img skill' id=skill_html></span> HTML
           </li>
           <li>
-            <img class=table_img src='../images/logos/stl.png' /> STL TLM
+            <span class='table_img skill' id=skill_css></span> CSS
           </li>
           <li>
-            <img class=table_img src='../images/logos/testing.png' /> UAT
+            <span class='table_img skill' id=skill_sass></span> SASS
           </li>
           <li>
-            <img class=table_img src='../images/logos/optimise.png' /> Optimisation
+            <span class='table_img skill' id=skill_git></span> GIT
           </li>
           <li>
-            <img class=table_img src='../images/logos/problem.png' /> Problem Solving
+            <span class='table_img skill' id=skill_sql></span> SQL
           </li>
           <li>
-            <img class=table_img src='../images/logos/risk.png' /> Risk Analysis
+            <span class='table_img skill' id=skill_tlm></span> STL TLM
           </li>
           <li>
-            <img class=table_img src='../images/logos/analysis.png' /> Operations Analysis
+            <span class='table_img skill' id=skill_excel></span> MS Excel
+          </li>
+          <li>
+            <span class='table_img skill' id=skill_access></span> MS Access
+          </li>
+          <li>
+            <span class='table_img skill' id=skill_uat></span> UAT
+          </li>
+          <li>
+            <span class='table_img skill' id=skill_opt></span> Optimisation
+          </li>
+          <li>
+            <span class='table_img skill' id=skill_prob></span> Problem Solving
+          </li>
+          <li>
+            <span class='table_img skill' id=skill_risk></span> Risk Analysis
+          </li>
+          <li>
+            <span class='table_img skill' id=skill_ops></span> Operations Analysis
           </li>
         </ul>
       </div>
       <div id=skill_table class=margin70>
-        <table class='standard_table nodecoration margin70 right_txt no_top'>
+        <table class='standard_table nodecoration margin70 right_txt no_top default_cursor'>
           <tr>
             <td>
-            Python <img class=table_img src='../images/logos/python.png' />
+            Ruby <span class='table_img skill' id=skill_ruby></span>
             </td>
             <td>
-            Javascript <img class=table_img src='../images/logos/javascript.png' />
+            Rails <span class='table_img skill' id=skill_rails></span>
             </td>
             <td>
-            HTML <img class=table_img src='../images/logos/html.png' />
+            Rspec <span class='table_img skill' id=skill_rspec></span>
             </td>
             <td>
-            CSS <img class=table_img src='../images/logos/css.png' />
+            Python <span class='table_img skill' id=skill_python></span>
             </td>
             <td>
-            SQL <img class=table_img src='../images/logos/sql.png' />
+            Javascript <span class='table_img skill' id=skill_js></span>
             </td>
           </tr>
           <tr>
             <td>
-            VBA <img class=table_img src='../images/logos/vba.png' />
+            Jquery <span class='table_img skill' id=skill_jquery></span>
             </td>
             <td>
-            MS Excel <img class=table_img src='../images/logos/excel.png' />
+            Ajax <span class='table_img skill' id=skill_ajax></span>
             </td>
             <td>
-            MS Access <img class=table_img src='../images/logos/access.png' />
+            HTML <span class='table_img skill' id=skill_html></span>
             </td>
             <td>
-            STL TLM <img class=table_img src='../images/logos/stl.png' />
+            CSS <span class='table_img skill' id=skill_css></span>
             </td>
             <td>
-            UAT <img class=table_img src='../images/logos/testing.png' />
+            SASS <span class='table_img skill' id=skill_sass></span>
             </td>
           </tr>
           <tr>
             <td>
-            <span class=small_text>Optimisation</span> <img class=table_img src='../images/logos/optimise.png' />
+            GIT <span class='table_img skill' id=skill_git></span>
             </td>
             <td>
-            <span class=small_text>Problem Solving</span> <img class=table_img src='../images/logos/problem.png' />
+            SQL <span class='table_img skill' id=skill_sql></span>
             </td>
             <td>
-            Risk Analysis <img class=table_img src='../images/logos/risk.png' />
+            STL TLM <span class='table_img skill' id=skill_tlm></span>
             </td>
-            <td colspan=2>
-            Operations Analysis <img class=table_img src='../images/logos/analysis.png' />
+            <td>
+            MS Excel <span class='table_img skill' id=skill_excel></span>
+            </td>
+            <td>
+            MS Access <span class='table_img skill' id=skill_access></span>
+            </td>
+          </tr>
+          <tr>
+            <td>
+            <span class=small_text>Optimisation</span> <span class='table_img skill' id=skill_opt></span>
+            </td>
+            <td>
+            UAT <span class='table_img skill' id=skill_uat></span>
+            </td>
+            <td>
+            <span class=small_text>Problem Solving</span> <span class='table_img skill' id=skill_prob></span>
+            </td>
+            <td>
+            Risk Analysis <span class='table_img skill' id=skill_risk></span>
+            </td>
+            <td>
+            <span class=small_text>Ops Analysis</span> <span class='table_img skill' id=skill_ops></span>
             </td>
             <td>
             </td>
@@ -337,7 +370,7 @@
           </tr>
           <tr>
             <td>
-            Oct 2014 - Present
+            Oct 2014 - Aug 2016
             </td>
           </tr>
           <tr>
@@ -490,7 +523,7 @@
             Oct 2014
             </td>
             <td class=centred_txt>
-            Present
+            Aug 2016
             </td>
             <td>
               Freelance <span class=small_text>(Software, Graphic Design)</span>
@@ -779,7 +812,7 @@
       <!-- This will only appear if the screen is too narrow to support the table -->
       <div id=short_table1 class=margin70>
         <span class='margin40 gen_title small_text'>Standard</span>
-        <table class='standard_table decorated margin40 no_top'>
+        <table class='standard_table decorated margin40 no_top default_cursor'>
           <tr>
             <th>
             </th>
@@ -830,12 +863,31 @@
           </tr>
           <tr>
             <td>
+            The Odin Project
+            </td>
+          </tr>
+          <tr>
+            <td>
+            Aug 2016 - Present
+            </td>
+          </tr>
+          <tr>
+            <td>
+            Web Development
+            </td>
+          </tr>
+          <tr>
+            <th>
+            </th>
+          </tr>
+          <tr>
+            <td>
             Business Analysis Practitioner <span class=small_text>(IIBA Endorsed)</span>
             </td>
           </tr>
           <tr>
             <td>
-            Jan 2014
+            Aug 2013 - Jan 2014
             </td>
           </tr>
           <tr>
@@ -854,7 +906,7 @@
           </tr>
           <tr>
             <td>
-            Oct 2013
+            Aug 2013 - Oct 2013
             </td>
           </tr>
           <tr>
@@ -867,7 +919,7 @@
       <!-- This will only appear if the screen is wide enough -->
       <div id=full_table1 class=margin70>
         <span class='margin70 gen_title small_text'>Standard</span>
-        <table class='standard_table decorated decorated_colour margin70 no_top'>
+        <table class='standard_table decorated decorated_colour margin70 no_top default_cursor'>
           <tr>
             <th colspan=2>
             Period
@@ -912,9 +964,9 @@
       <br />
       <div id=full_table2 class=margin70>
         <span class='margin70 gen_title small_text'>Online</span>
-        <table class='standard_table decorated decorated_colour margin70'>
+        <table class='standard_table decorated decorated_colour margin70 default_cursor'>
           <tr>
-            <th>
+            <th colspan=2>
             Period
             </th>
             <th>
@@ -926,6 +978,23 @@
           </tr>
           <tr>
             <td class=centred_txt>
+            Aug 2016
+            </td>
+            <td class=centred_txt>
+            Present
+            </td>
+            <td>
+            The Odin Project
+            </td>
+            <td>
+            Web Development
+            </td>
+          </tr>
+          <tr>
+            <td class=centred_txt>
+            Aug 2013
+            </td>
+            <td class=centred_txt>
             Jan 2014
             </td>
             <td>
@@ -936,6 +1005,9 @@
             </td>
           </tr>
           <tr>
+            <td class=centred_txt>
+            Aug 2013
+            </td>
             <td class=centred_txt>
             Oct 2013
             </td>
@@ -963,10 +1035,10 @@
         Download
       </p>
       <div class='centred margin0'>
-        <a href='../other/Thomas E. Rudge - CV 2016.pdf' target='_blank'>
+        <a href='../other/Thomas E. Rudge - CV 2017.pdf' rel="noopener noreferrer" target='_blank'>
           <img src='../images/logos/pdf.gif' style='padding-right: 10px;' />
         </a>
-        <a href='../other/Thomas E. Rudge - CV 2016.docx' target='_blank'>
+        <a href='../other/Thomas E. Rudge - CV 2017.docx' rel="noopener noreferrer" target='_blank'>
           <img src='../images/logos/word.gif' />
         </a>
       </div>
