Updating software page

--- a/html/software.html
+++ b/html/software.html
@@ -179,13 +179,13 @@
     <div class=gen_div>
       <p class='gen_text justify med_text margin40'>
         <span class='gen_title title_text'>Software</span><br />
-        Below are some of the main software projects I have been working on over the years.
+        The below summaries detail a few software projects I have been working on over the years. Please check out my <a href="https://github.com/Thomas-Rudge" class=normal_link target="_blank" rel="noopener noreferrer">GitHub profile</a> to see source code and further examples.
       </p>
     </div>
     <hr/>
     <div class='gen_div margin40 mobile_parent' id=nepos>
       <a href="http://neposservice.wix.com/nepos" title="Nepos Software" target="_blank" >
-        <img class='genphoto mobile_child img150' src="../images/logos/nepos_logo.png" alt="NEPOS" />
+        <img class='genphoto mobile_child img150 soft_image' src="../images/logos/nepos_logo.png" alt="NEPOS" />
         <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fnepos.software%2F&tabs=timeline&width=180&height=70&small_header=true&adapt_container_width=true&hide_cover=true&show_facepile=false&appId"
           width="180" height="70" style="border:none;overflow:hidden;margin-top: 8px;" scrolling="no" frameborder="0" allowTransparency="true">
         </iframe>
@@ -200,13 +200,33 @@
       Nepos's main features include: the POS interface; cash-flow, invoice, and loss records; end of day reporting; stock records and monitoring;
       MI console; search screen for all records; archiving; customisable user profiles; user activity, archive, and error logs; and automatic alerts
       to email and PushBullet. More details can be found on the
-      <a class=normal_link href="http://neposservice.wix.com/nepos" title="Nepos Software" target="_blank">Nepos website</a>.
+      <a class=normal_link href="http://neposservice.wix.com/nepos" title="Nepos Software" rel="noopener noreferrer" target="_blank">Nepos website</a>.
       </p>
     </div>
     <hr/>
     <div class='gen_div margin40 mobile_parent'>
+      <a href="https://www.micro-reddit.herokuapp.com" title="Micro Reddit">
+        <img class='genphoto mobile_child img150 soft_image' src="../images/logos/micro_reddit.png" alt="Micro Reddit" />
+      </a>
+      <p class='gen_text justify med_text mobile_child'>
+      After <a class=normal_link rel="noopener noreferrer" href="https://toms-micropost-app.herokuapp.com" target="_blank">completing</a> Michael Hartl's
+      <a class=normal_link href="https://www.railstutorial.org/book" rel="noopener noreferrer" target="_blank">ruby tutorial</a> I found myself wanting to
+      try something a bit more challenging. So I decided to <a class=red_link href="https://www.micro-reddit.herokuapp.com" rel="noopener noreferrer" target="_blank">rebuild reddit</a>
+      from scratch.
+      </p>
+    </div>
+    <hr/>
+    <div class='gen_div margin40 mobile_parent'>
+      <p class='gen_text justify med_text mobile_child'>
+      A web based version of the <a class=normal_link rel="noopener noreferrer" href="https://github.com/Thomas-Rudge/mastermind_webapp" target="_blank">mastermind</a>
+      board game. Built with Ruby and Sinatra.
+      <br/>
+      <iframe src="https://toms-mastermind.herokuapp.com/" type="text/html" frameborder="0" width=300 height=700></iframe>
+    </div>
+    <hr/>
+    <div class='gen_div margin40 mobile_parent'>
       <a href="swift_page.html" title="MT940/50 Generator">
-        <img class='genphoto mobile_child img150' src="../images/logos/mt_logo.png" alt="MT Logo" />
+        <img class='genphoto mobile_child img150 soft_image' src="../images/logos/mt_logo.png" alt="MT Logo" />
       </a>
       <p class='gen_text justify med_text mobile_child'>
       One of my first jobs was as a System Administrator and a daily task was checking the banks swift messaging system for
@@ -214,7 +234,7 @@
       message structure and standards, and so it seemed only fitting that one of my first programs be a conversion script for such
       messages. I have created an <a class=red_link href="swift_page.html">online version</a> using Javascript, and a Python and Ruby version can be
       found on my <a class=normal_link href="https://github.com/Thomas-Rudge" target="_blank">GitHub page</a>.
-      I also created a version with a graphical user interface for a company in Germany that you can download 
+      I also created a version with a graphical user interface for a company in Germany that you can download
       <a class=normal_link href="https://www.dropbox.com/s/62chdik0oi9r4jf/MT9GEN.zip?dl=0" target="_blank">here</a>.
       </p>
     </div>
