Added Mastermind game

--- a/html/software.html
+++ b/html/software.html
@@ -209,7 +209,8 @@
         <img class='genphoto mobile_child img150 soft_image' src="../images/logos/micro_reddit.png" alt="Micro Reddit" />
       </a>
       <p class='gen_text justify med_text mobile_child'>
-      After <a class=normal_link rel="noopener noreferrer" href="https://toms-micropost-app.herokuapp.com" target="_blank">completing</a> Michael Hartl's
+      After building a simple <a class=normal_link rel="noopener noreferrer" target="_blank" href="https://toms-simple-blogger.herokuapp.com/">blogging website</a> and
+      <a class=normal_link rel="noopener noreferrer" href="https://toms-micropost-app.herokuapp.com" target="_blank">completing</a> Michael Hartl's
       <a class=normal_link href="https://www.railstutorial.org/book" rel="noopener noreferrer" target="_blank">ruby tutorial</a> I found myself wanting to
       try something a bit more challenging. So I decided to <a class=red_link href="https://www.micro-reddit.herokuapp.com" rel="noopener noreferrer" target="_blank">rebuild reddit</a>
       from scratch.
@@ -218,10 +219,11 @@
     <hr/>
     <div class='gen_div margin40 mobile_parent'>
       <p class='gen_text justify med_text mobile_child'>
-      A web based version of the <a class=normal_link rel="noopener noreferrer" href="https://github.com/Thomas-Rudge/mastermind_webapp" target="_blank">mastermind</a>
-      board game. Built with Ruby and Sinatra.
+      A web based version of the <a class=normal_link rel="noopener noreferrer" target="_blank" href="https://github.com/Thomas-Rudge/mastermind_webapp">mastermind</a>
+      board game. Built with Ruby and Sinatra. I have also written command line versions of <a class=normal_link rel="noopener noreferrer" target="_blank" href="https://github.com/Thomas-Rudge/chess_game">chess</a>
+      and <a class=normal_link rel="noopener noreferrer" target="_blank" href="https://github.com/Thomas-Rudge/hangman">hangman</a>.
       <br/>
-      <iframe src="https://toms-mastermind.herokuapp.com/" type="text/html" frameborder="0" width=300 height=700></iframe>
+      <iframe src="https://toms-mastermind.herokuapp.com/" class=iframe type="text/html" width=350 height=690></iframe>
     </div>
     <hr/>
     <div class='gen_div margin40 mobile_parent'>
@@ -233,9 +235,9 @@
       the Vostro accounts, as well as incoming cash statements for the bank's main reconciliation system. I learnt a lot about swift
       message structure and standards, and so it seemed only fitting that one of my first programs be a conversion script for such
       messages. I have created an <a class=red_link href="swift_page.html">online version</a> using Javascript, and a Python and Ruby version can be
-      found on my <a class=normal_link href="https://github.com/Thomas-Rudge" target="_blank">GitHub page</a>.
+      found on my <a class=normal_link href="https://github.com/Thomas-Rudge" rel="noopener noreferrer" target="_blank">GitHub page</a>.
       I also created a version with a graphical user interface for a company in Germany that you can download
-      <a class=normal_link href="https://www.dropbox.com/s/62chdik0oi9r4jf/MT9GEN.zip?dl=0" target="_blank">here</a>.
+      <a class=normal_link href="https://www.dropbox.com/s/62chdik0oi9r4jf/MT9GEN.zip?dl=0" rel="noopener noreferrer" target="_blank">here</a>.
       </p>
     </div>
     <hr/>
@@ -243,7 +245,7 @@
       <div class=inline_item>
         <p class='gen_text justify med_text mobile_child'>
         I created this drawing tool as part of an Odin Project assignment. It was created using jQuery. You can see the tool's individual repo
-        on GitHub <a href="https://github.com/Thomas-Rudge/web-a-sketch" title="web-a-sketch">here.</a>
+        on GitHub <a href="https://github.com/Thomas-Rudge/web-a-sketch" title="web-a-sketch" rel="noopener noreferrer" target="_blank" class=normal_link>here.</a>
         </p>
         <div id=sketch_wrapper>
           <div id=controls>
