--- a/index.html
+++ b/index.html
@@ -181,19 +181,19 @@
       </defs>
       <text fill="url(#grad1)" class='gen_text big_text margin40 justify' x="0" y="0">
     <tspan x='70' y='30'>Hello...</tspan>
-    <tspan x='70' y='63'>...my name is Thomas. I have a fairly long and varied history, but if</tspan>
-    <tspan x='70' y='96'>there is one thing that ties it all together, it’s a desire for the novel</tspan>
-    <tspan x='70' y='129'>combined with a strong ability to assimilate complex ideas quickly</tspan>
-    <tspan x='70' y='162'>and effectively. I’m a Business Analyst, Process Expert and</tspan>
-    <tspan x='70' y='195'>Administrator, self-taught Software Developer, Graphic Designer,</tspan>
-    <tspan x='70' y='228'>and Photographer, who is currently dabbling in Web Design.</tspan>
-    <tspan x='70' y='261'>Welcome to my site.</tspan>
+    <tspan x='70' y='63'>...my name is Thomas. I have a fairly long and varied history,</tspan>
+    <tspan x='70' y='96'>but if there is one thing that ties it all together, it’s a desire for</tspan>
+    <tspan x='70' y='129'>the novel combined with a strong ability to assimilate complex</tspan>
+    <tspan x='70' y='162'>ideas quickly and effectively. I’m a Business Analyst, Process</tspan>
+    <tspan x='70' y='195'>Expert and Administrator, Graphic Designer, Photographer,</tspan>
+    <tspan x='70' y='228'>and self-taught Developer. Welcome to my site.</tspan>
+    <tspan x='70' y='261'></tspan>
     </text>
     </svg>
     <div id=intro_text class=gen_div>
       <span class='gen_text gen_title big_text margin40 no_bottom'>Hello...</span>
       <p class='gen_text big_text gradient_text margin40 justify no_top'>
-      ...my name is Thomas. I have a fairly long and varied history, but if there is one thing that ties it all together, it’s a desire for the novel combined with a strong ability to assimilate complex ideas quickly and effectively. I’m a Business Analyst, Process Expert and Administrator, self-taught Software Developer, Graphic Designer, and Photographer, who is currently dabbling in Web Design. Welcome to my site. 
+      ...my name is Thomas. I have a fairly long and varied history, but if there is one thing that ties it all together, it’s a desire for the novel combined with a strong ability to assimilate complex ideas quickly and effectively. I’m a Business Analyst, Process Expert and Administrator, Graphic Designer, Photographer, and self taught Developer. Welcome to my site.
       </p>
     </div>
     <br /><br />
