--- a/html/design.html
+++ b/html/design.html
@@ -164,94 +164,94 @@
     <br />
     <div class=rowcontainer>
       <div id=dimg01 class=design_div>
-        <img src="../images/design/4katalyst1.png" alt="Katalyst" title='Katalyst Magazine #4' onclick="expandImageView('dimg01')" />
+        <img src="../images/design/4katalyst1.png" alt="Katalyst" title='Katalyst Magazine #4' onclick="expandImageView(event, 'dimg01', false)" />
         <p class='gen_text centred small_text invert_text'>The cover page of the Katalyst magazine, 4th edition.</p>
       </div>
       <div id=dimg02 class=design_div>
-        <img src="../images/design/4katalyst2.png" alt="Katalyst" title='Katalyst Magazine #4' onclick="expandImageView('dimg02')" />
+        <img src="../images/design/4katalyst2.png" alt="Katalyst" title='Katalyst Magazine #4' onclick="expandImageView(event, 'dimg02', false)" />
         <p class='gen_text centred small_text invert_text'>An article in the Katalyst magazine, 4th edition.</p>
       </div>
       <div id=dimg03 class=design_div>
-        <img src="../images/design/4katalyst3.png" alt="Katalyst" title='Katalyst Magazine #4' onclick="expandImageView('dimg03')" />
+        <img src="../images/design/4katalyst3.png" alt="Katalyst" title='Katalyst Magazine #4' onclick="expandImageView(event, 'dimg03', false)" />
         <p class='gen_text centred small_text invert_text'>An article in the Katalyst magazine, 4th edition.</p>
       </div>
     </div>
     <br />
     <div class=rowcontainer>
       <div id=dimg04 class=design_div>
-        <img src="../images/design/4katalyst5.png" alt="Katalyst" title='Katalyst Magazine #4' onclick="expandImageView('dimg04')" />
+        <img src="../images/design/4katalyst5.png" alt="Katalyst" title='Katalyst Magazine #4' onclick="expandImageView(event, 'dimg04')" />
         <p class='gen_text centred small_text invert_text'>An article in the Katalyst magazine, 4th edition.</p>
       </div>
       <div id=dimg05 class=design_div>
-        <img src="../images/design/5katalyst1.png" alt="Katalyst" title='Katalyst Magazine #5' onclick="expandImageView('dimg05')" />
+        <img src="../images/design/5katalyst1.png" alt="Katalyst" title='Katalyst Magazine #5' onclick="expandImageView(event, 'dimg05')" />
         <p class='gen_text centred small_text invert_text'>The editorial for the Katalyst magazine, 5th edition.</p>
       </div>
       <div id=dimg06 class=design_div>
-        <img src="../images/design/4katalyst4.png" alt="Katalyst" title='Katalyst Magazine #5' onclick="expandImageView('dimg06')" />
+        <img src="../images/design/4katalyst4.png" alt="Katalyst" title='Katalyst Magazine #5' onclick="expandImageView(event, 'dimg06')" />
         <p class='gen_text centred small_text invert_text'>An article in the Katalyst magazine, 5th edition.</p>
       </div>
     </div>
     <br />
     <div class=rowcontainer id=rc1>
       <div id=dimg07 class=design_div>
-        <img src="../images/design/lazy_placeholder.gif" alt="Katalyst" title='Katalyst Magazine #5' onclick="expandImageView('dimg07')" />
+        <img src="../images/design/lazy_placeholder.gif" alt="Katalyst" title='Katalyst Magazine #5' onclick="expandImageView(event, 'dimg07')" />
         <p class='gen_text centred small_text invert_text'>An article in the Katalyst magazine, 5th edition.</p>
       </div>
       <div id=dimg08 class=design_div>
-        <img src="../images/design/lazy_placeholder.gif" alt="Katalyst" title='Katalyst Magazine #5' onclick="expandImageView('dimg08')" />
+        <img src="../images/design/lazy_placeholder.gif" alt="Katalyst" title='Katalyst Magazine #5' onclick="expandImageView(event, 'dimg08')" />
         <p class='gen_text centred small_text invert_text'>An article in the Katalyst magazine, 5th edition.</p>
       </div>
       <div id=dimg09 class=design_div>
-        <img src="../images/design/lazy_placeholder.gif" alt="Katalyst" title='Katalyst Magazine #5' onclick="expandImageView('dimg09')" />
+        <img src="../images/design/lazy_placeholder.gif" alt="Katalyst" title='Katalyst Magazine #5' onclick="expandImageView(event, 'dimg09')" />
         <p class='gen_text centred small_text invert_text'>An article in the Katalyst magazine, 5th edition.</p>
       </div>
     </div>
     <br />
     <div class=rowcontainer id=rc2>
       <div id=dimg10 class=design_div>
-        <img src="../images/design/lazy_placeholder.gif" alt="Nepos" title='Nepos Logo' onclick="expandImageView('dimg10')" />
+        <img src="../images/design/lazy_placeholder.gif" alt="Nepos" title='Nepos Logo' onclick="expandImageView(event, 'dimg10')" />
         <p class='gen_text centred small_text invert_text'>The logo of the Nepos cash management software.</p>
       </div>
       <div id=dimg11 class=design_div>
-        <img src="../images/design/lazy_placeholder.gif" alt="Nepos" title='Nepos Splash Screen' onclick="expandImageView('dimg11')" />
+        <img src="../images/design/lazy_placeholder.gif" alt="Nepos" title='Nepos Splash Screen' onclick="expandImageView(event, 'dimg11')" />
         <p class='gen_text centred small_text invert_text'>The splash screen of the Nepos cash management software.</p>
       </div>
     </div>
     <br />
     <div class=rowcontainer id=rc3>
       <div id=dimg12 class=design_div>
-        <img src="../images/design/lazy_placeholder.gif" alt="GSL" title='GSL Brochure' onclick="expandImageView('dimg12')" />
+        <img src="../images/design/lazy_placeholder.gif" alt="GSL" title='GSL Brochure' onclick="expandImageView(event, 'dimg12')" />
         <p class='gen_text centred small_text invert_text'>The cover page of a brochure create for Gunpati Stock Ltd.</p>
       </div>
       <div id=dimg13 class=design_div>
-        <img src="../images/design/lazy_placeholder.gif" alt="GSL" title='GSL Brochure' onclick="expandImageView('dimg13')" />
+        <img src="../images/design/lazy_placeholder.gif" alt="GSL" title='GSL Brochure' onclick="expandImageView(event, 'dimg13')" />
         <p class='gen_text centred small_text invert_text'>The inner page of a brochure create for Gunpati Stock Ltd.</p>
       </div>
       <div id=dimg14 class=design_div>
-        <img src="../images/design/lazy_placeholder.gif" alt="GSL" title='GSL Annual Report' onclick="expandImageView('dimg14')" />
+        <img src="../images/design/lazy_placeholder.gif" alt="GSL" title='GSL Annual Report' onclick="expandImageView(event, 'dimg14')" />
         <p class='gen_text centred small_text invert_text'>The cover page Gunpati Stock Ltd's Annual Report.</p>
       </div>
     </div>
     <br />
     <div class=rowcontainer id=rc4>
       <div id=dimg15 class=design_div>
-        <img src="../images/design/lazy_placeholder.gif" alt="Obsidian" title='Obsidian Business Directory' onclick="expandImageView('dimg15')" />
+        <img src="../images/design/lazy_placeholder.gif" alt="Obsidian" title='Obsidian Business Directory' onclick="expandImageView(event, 'dimg15')" />
         <p class='gen_text centred small_text invert_text'>The cover page for a directory of local businesses,<br />created for the Obsidian Business Interface.</p>
       </div>
       <div id=dimg16 class=design_div>
-        <img src="../images/design/lazy_placeholder.gif" alt="Obsidian" title='Obsidian Event Report' onclick="expandImageView('dimg16')" />
+        <img src="../images/design/lazy_placeholder.gif" alt="Obsidian" title='Obsidian Event Report' onclick="expandImageView(event, 'dimg16')" />
         <p class='gen_text centred small_text invert_text'>Obsidian Business Interface event report cover page.</p>
       </div>
       <div id=dimg17 class=design_div>
-        <img src="../images/design/lazy_placeholder.gif" alt="EA" title='Entrepreneurs Associates' onclick="expandImageView('dimg17')" />
+        <img src="../images/design/lazy_placeholder.gif" alt="EA" title='Entrepreneurs Associates' onclick="expandImageView(event, 'dimg17')" />
         <p class='gen_text centred small_text invert_text'>The cover page of an info-pack created for<br />Entrepreneurs Associates micro finance company.</p>
       </div>
       <div id=dimg18 class=design_div>
-        <img src="../images/design/lazy_placeholder.gif" alt="EA" title='Entrepreneurs Associates' onclick="expandImageView('dimg18')" />
+        <img src="../images/design/lazy_placeholder.gif" alt="EA" title='Entrepreneurs Associates' onclick="expandImageView(event, 'dimg18')" />
         <p class='gen_text centred small_text invert_text'>An inner page of the EA info-pack.</p>
       </div>
       <div id=dimg19 class=design_div>
-        <img src="../images/design/lazy_placeholder.gif" alt="EA" title='Entrepreneurs Associates' onclick="expandImageView('dimg19')" />
+        <img src="../images/design/lazy_placeholder.gif" alt="EA" title='Entrepreneurs Associates' onclick="expandImageView(event, 'dimg19')" />
         <p class='gen_text centred small_text invert_text'>An inner page of the EA info-pack.</p>
       </div>
     </div>
