--- a/html/professional.html
+++ b/html/professional.html
@@ -184,13 +184,13 @@
         Sole designer and developer of <a class=normal_link href='software.html#nepos'>Nepos</a>, a POS and cash management system currently being distributed in north east India.
         </li>
         <li>
-        Business Technical Lead on significant upgrades to corporate reconciliation system, from TLM2.0 to TLM2.7; and later from TLM2.7 to Intellimatch. Deeply involved with solution assessment, requirements management, operations process redesign and enhancement, user acceptance testing, and implementation planning and execution.
+        Business Technical Lead on large scale system implementations and upgrades. Deeply involved with solution assessment, requirements management, operations process redesign and enhancement, user acceptance testing, and implementation planning and execution. A firm knowledge of the end to end <a class=normal_link href='#projects'>project</a> life cycle and methodologies.
         </li>
         <li>
-        Overseen the success of numerous <a class=normal_link href='#projects'>projects</a> from inception to implementation, attaining a firm knowledge of the end to end project life cycle within waterfall and agile methodologies.
+        Routinely identified system efficiency gains through bespoke SQL and data analysis. Implemented configuration changes that resulted in a five percent increase in system straight through processing, moving tens of thousands of records away from manual intervention.
         </li>
         <li>
-        Routinely identified potential enhancements to systems configuration by retrieving large data sets (1k < 100k rows) via custom SQL, and analysing them via Excel.
+        <a class=normal_link href='#awards'>Awarded</a> Barclays Significant Technology Achievement Award in recognition of the outstanding contribution to the Kenya Replatforming Programme in the roles of Business Analyst and Implementation Manager. Awarded by CIO of Technology and COO of Barclays Africa.
         </li>
         <li>
         Proven leadership skills with extensive experience managing operation, test, and implementation teams in the UK and India.
@@ -200,6 +200,9 @@
         </li>
         <li>
         Solid communication skills. Experienced in facilitating requirements workshops, brainstorming sessions, training sessions, presentations, and meetings at all levels. Produced bespoke reports and MI for senior management.
+        </li>
+        <li>
+        Proficient in Ruby, Python, Javascript, SQL languages; with good understanding of data structures and OOP / MVC principles.
         </li>
       </ul>
     </div>
@@ -1005,7 +1008,7 @@
     <br />
     <div class=gen_div>
       <p class='gen_text justify med_text margin70'>
-        <span class='gen_title blue_text'><u>Testimonials and Awards</u></span>
+        <span id='awards' class='gen_title blue_text'><u>Testimonials and Awards</u></span>
         Significant Technology Achievement Award in recognition of the outstanding contribution to the Kenya Replatforming Programme.<br /> – Awarded by CIO of Technology Department & COO of Barclays Africa
         <br />
         <br />
