Minor change to cv

--- a/html/professional.html
+++ b/html/professional.html
@@ -184,7 +184,7 @@
         Sole designer and developer of <a class=normal_link href='software.html#nepos'>Nepos</a>, a POS and cash management system currently being distributed in north east India.
         </li>
         <li>
-        Business Technical Lead on large scale system implementations and upgrades. Deeply involved with solution assessment, requirements management, operations process redesign and enhancement, user acceptance testing, and implementation planning and execution. A firm knowledge of the end to end <a class=normal_link href='#projects'>project</a> life cycle and methodologies.
+        Business Analyst on large scale system implementations and upgrades. Deeply involved with solution assessment, requirements management, operations process redesign and enhancement, user acceptance testing, and implementation planning and execution. A firm knowledge of the end to end <a class=normal_link href='#projects'>project</a> life cycle and methodologies.
         </li>
         <li>
         Routinely identified system efficiency gains through bespoke SQL and data analysis. Implemented configuration changes that resulted in a five percent increase in system straight through processing, moving tens of thousands of records away from manual intervention.
